--- a/icones.css
+++ b/icones.css
@@ -21,8 +21,8 @@
     border-radius: 0;
 }
 
-#chat #chat-messages [data-cid^="13467388-"] .badge-box i {
-    background-image: url(https://chilloutmusica.github.io/cm/src/badges/13467388.png);
+#chat #chat-messages [data-cid^="30410098-"] .badge-box i {
+    background-image: url(https://chilloutmusica.github.io/cm/src/badges/4150521.gif);
     background-size: cover;
     top: 0;
     left: 0;
