--- a/icones.css
+++ b/icones.css
@@ -11,7 +11,7 @@
 }
 
 #chat #chat-messages [data-cid^="3548312-"] .badge-box i {
-    background-image: url(https://i.gifer.com/UfOs.gif);
+    background-image: url(https://static.planetminecraft.com/files/avatar/204709.gif);
     background-size: cover;
     top: 0;
     left: 0;
