--- a/message.css
+++ b/message.css
@@ -1,6 +1,9 @@
+/* MENSAGEM DO CHAT COM IMAGEM DE FUNDO */
+/* Smygou */
+
 .cm.message.deletable.id-3548312::before,
 .cm.message.id-3548312::before {
-	background-image: url(https://i.imgur.com/cjWFlWq.jpg);	/* Smygou */
+	background-image: url(https://i.imgur.com/aXJr6HG.jpg);
 	background-repeat: no-repeat;
 	content: "";
 	position: absolute;
@@ -14,8 +17,63 @@
 	background-position-x: right;
 }
 
+
+/* Fellipe */
+.cm.message.deletable.id-3964410::before,
+.cm.message.id-3964410::before {
+	background-image: url(https://i.imgur.com/Ds4BSxC.jpg);
+	background-repeat: no-repeat;
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity: .5;
+	z-index: -1;
+	background-position-y: -10px;
+	background-position-x: right;
+}
+
+
+
+
+
+/* BADGE NO PERFIL */
+/* Smygou */
+
 #user-rollover.id-3548312 .badge-box i { 
 background-image: url(https://i.imgur.com/QNNkaFy.gif) !important;
+    background-size: cover;
+    top: 0;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    border: none;
+    border-radius: 0;
+}
+
+ #user-rollover.id-3548312 .level:after {
+    background-image: url(https://i.imgur.com/bCqxRM2.png);
+    background-repeat: no-repeat;
+    content: "Astronauta";
+    display: inline-block;
+    color: #00BB95!important;
+    font-weight: bold;
+    margin: 0px 0px 0 20px!important;
+    padding: 0 0 0 18px;
+}
+
+#user-rollover.id-3548312 .info .role i {
+    position: absolute;
+    margin: -17px 0 0 45px;
+}
+
+
+/* Fellipe */
+
+#user-rollover.id-3548312 .badge-box i { 
+background-image: url(https://chilloutmusica.github.io/cm/src/badges/20793866.gif) !important;
     background-size: cover;
     top: 0;
     left: 0;
