--- a/message.css
+++ b/message.css
@@ -21,7 +21,7 @@
 /* Fellipe */
 .cm.message.deletable.id-3964410::before,
 .cm.message.id-3964410::before {
-	background-image: url(https://i.imgur.com/Ds4BSxC.jpg);
+	background-image: url(https://i.imgur.com/aXJr6HG.jpg);
 	background-repeat: no-repeat;
 	content: "";
 	position: absolute;
@@ -53,27 +53,29 @@ background-image: url(https://i.imgur.com/QNNkaFy.gif) !important;
     border-radius: 0;
 }
 
- #user-rollover.id-3548312 .level:after {
+#user-rollover.id-3548312 .meta {
+    height: 145px!important;
+}
+
+#user-rollover.id-3548312 .joined:after {
+    position: absolute;
+    content: 'Astronauta';
     background-image: url(https://i.imgur.com/bCqxRM2.png);
     background-repeat: no-repeat;
-    content: "Astronauta";
-    display: inline-block;
-    color: #00BB95!important;
-    font-weight: bold;
-    margin: 0px 0px 0 20px!important;
-    padding: 0 0 0 18px;
-}
-
-#user-rollover.id-3548312 .info .role i {
     position: absolute;
-    margin: -17px 0 0 45px;
+    color: #00799E!important;
+    margin: 47px 0 0 -96px;
+    padding-left: 21px!important;
+    font-weight: 400;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: 14px;
 }
-
 
 /* Fellipe */
 
-#user-rollover.id-3548312 .badge-box i { 
-background-image: url(https://chilloutmusica.github.io/cm/src/badges/20793866.gif) !important;
+#user-rollover.id-3964410 .badge-box i { 
+background-image: url(https://i.imgur.com/5Sz0ix6.jpg) !important;
     background-size: cover;
     top: 0;
     left: 0;
@@ -81,4 +83,23 @@ background-image: url(https://chilloutmusica.github.io/cm/src/badges/20793866.gi
     height: 30px;
     border: none;
     border-radius: 0;
+}
+
+#user-rollover.id-3964410 .meta {
+    height: 145px!important;
+}
+
+#user-rollover.id-3964410 .joined:after {
+    position: absolute;
+    content: 'Astronauta';
+    background-image: url(https://i.imgur.com/bCqxRM2.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    color: #00799E!important;
+    margin: 47px 0 0 -96px;
+    padding-left: 21px!important;
+    font-weight: 400;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: 14px;
 }
