--- a/SUPREMO.css
+++ b/SUPREMO.css
@@ -1,5 +1,4 @@
-/*
-    Tema do TomorrowLandPobre, antes de usar entre em contato com o player "Smygou" e "Fellippe".
+/* Tema do TomorrowLandPobre, antes de usar entre em contato com o player "Smygou" e "Fellippe".
 */
 
 
