--- a/SUPREMO.css
+++ b/SUPREMO.css
@@ -4,6 +4,7 @@
 
 @import url("https://cdn.rawgit.com/Smygou/PLUGDJAGORAVAI/d357485f/icones.css");
 @import url("https://cdn.rawgit.com/Smygou/PLUGDJAGORAVAI/f5e62b49/message.css");
+@import url("https://cdn.rawgit.com/Smygou/PLUGDJAGORAVAI/cf879d3b/Playlist.css");
 
 body {
     background-size: 100% auto !important;
