--- a/SUPREMO.css
+++ b/SUPREMO.css
@@ -4,6 +4,7 @@
 @import url("https://cdn.rawgit.com/Smygou/PLUGDJAGORAVAI/d357485f/icones.css");
 @import url("https://cdn.rawgit.com/Smygou/PLUGDJAGORAVAI/f5e62b49/message.css");
 @import url("https://cdn.rawgit.com/Smygou/PLUGDJAGORAVAI/09d0a425/Playlist.css");
+@import url("https://cdn.rawgit.com/Smygou/PLUGDJAGORAVAI/ec16d405/Menus.css");
 
 #footer #footer-user .info {
     z-index: 0!important;
