--- a/LIKEDESLIKEGRAB.css
+++ b/LIKEDESLIKEGRAB.css
@@ -160,7 +160,7 @@
   height: 60px !important;
   transition: ease-in-out 0.2s !important;
   border-style: solid;
-  border-color: white;
+  border-color: gray;
   border-radius: 200px;
   border-width: 3px;
 }
@@ -211,7 +211,7 @@
   display: block;
   font-size: 14px !important;
   padding-top: 4px;
-  border-color: white;
+  border-color: gray;
   border-width: 3px;
   border-style: solid;
   border-radius: 100px;
@@ -240,7 +240,7 @@
 
 .btn-no-dj-primary.btn-no-dj-secondary__bottom,
 .btn-no-dj-secondary.btn-no-dj-secondary__bottom {
-  border: 3px solid white;
+  border: 3px solid gray;
   border-radius: 100px;
   background-color: rgba(64, 16, 12, 0.9);
 }
