--- a/BADGE&GIFS.css
+++ b/BADGE&GIFS.css
@@ -89,3 +89,99 @@
     background-image: linear-gradient(to bottom,transparent,#000);
 }
 								
+/* BADGE NO PERFIL */
+/* Smygou */
+
+#user-rollover.id-3548312 .badge-box i { 
+background-image: url(https://media1.tenor.com/images/193b200261db8aa12465733e03d63aa5/tenor.gif?itemid=5598662) !important;
+    background-size: cover;
+    top: 0;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    border: none;
+    border-radius: 0;
+}
+
+#user-rollover.id-3548312 .meta {
+    height: 145px!important;
+}
+
+#user-rollover.id-3548312 .joined:after {
+    position: absolute;
+    content: 'Astronauta';
+    background-image: url(https://i.imgur.com/bCqxRM2.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    color: #00799E!important;
+    margin: 47px 0 0 -96px;
+    padding-left: 21px!important;
+    font-weight: 400;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: 14px;
+}
+
+/* Fellipe */
+
+#user-rollover.id-3964410 .badge-box i { 
+background-image: url(https://78.media.tumblr.com/tumblr_lyee6jzMZM1qeh0ago1_400.gif) !important;
+    background-size: cover;
+    top: 0;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    border: none;
+    border-radius: 0;
+}
+
+#user-rollover.id-3964410 .meta {
+    height: 145px!important;
+}
+
+#user-rollover.id-3964410 .joined:after {
+    position: absolute;
+    content: 'Astronauta';
+    background-image: url(https://i.imgur.com/bCqxRM2.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    color: #00799E!important;
+    margin: 47px 0 0 -96px;
+    padding-left: 21px!important;
+    font-weight: 400;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: 14px;
+}
+
+/* Brenda */
+
+#user-rollover.id-3548312 .badge-box i { 
+background-image: url(https://media.giphy.com/media/RVpdKaTHQSiIw/giphy.gif) !important;
+    background-size: cover;
+    top: 0;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    border: none;
+    border-radius: 0;
+}
+
+#user-rollover.id-3548312 .meta {
+    height: 145px!important;
+}
+
+#user-rollover.id-3548312 .joined:after {
+    position: absolute;
+    content: 'Astronauta';
+    background-image: url(https://i.imgur.com/bCqxRM2.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    color: #00799E!important;
+    margin: 47px 0 0 -96px;
+    padding-left: 21px!important;
+    font-weight: 400;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: 14px;
+}
