--- a/SUPREMO.css
+++ b/SUPREMO.css
@@ -3,8 +3,7 @@
 
 @import url("https://cdn.rawgit.com/Smygou/PLUGDJAGORAVAI/9819eb79/DJ.css");
 @import url("https://cdn.rawgit.com/Smygou/PLUGDJAGORAVAI/e0d6833e/DashPainel.css");
-@import url("https://cdn.rawgit.com/Smygou/PLUGDJAGORAVAI/d357485f/icones.css");
-@import url("https://cdn.rawgit.com/Smygou/PLUGDJAGORAVAI/f5e62b49/message.css");
+@import url("https://cdn.rawgit.com/Smygou/PLUGDJAGORAVAI/9adea159/BADGE&GIFS.css");
 @import url("https://cdn.rawgit.com/Smygou/PLUGDJAGORAVAI/09d0a425/Playlist.css");
 @import url("https://cdn.rawgit.com/Smygou/PLUGDJAGORAVAI/ec16d405/Menus.css");
 @import url("https://cdn.rawgit.com/Smygou/PLUGDJAGORAVAI/2ceb1a20/RESIDENTE.css");
